engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/checkout.less
.content--basket {
	.alert {
		.unitize-margin(15, 0);
	}
}

.product--table {

    .is--no-star {
        .unitize(-6, 16, margin-left);
    }
	.panel {
		border: 0 none;
	}
    .premium-product.panel {
        border: 1px solid @borderColor;
    }

    .delivery--status-icon {
        display: none;
    }

	// Actions above the actual table body
	.table--actions {
		.clearfix();
        .unitize-padding(20, 0, 0);
		position: relative;

		.btn--primary,
		.btn--secondary {
			.unitize-padding(10, 15);
		}

		.btn--primary i {
			.unitize-margin(0, 0, 0, 6);
			font-size: 8px;
			vertical-align: middle;
		}

		.btn--secondary {
			.unitize(5, 16, margin-right);
		}
	}

	// Hide the table header due to the labels inline for smartphones
	.table--header { display: none }

	.table--row {
		.unitize-padding(10, 0);
		.clearfix();
		position: relative;
		border-bottom: 1px solid @borderColor;
		width: 100%;
		height: 100%;
	}
    .row--voucher {
        .unitize-height(130);
    }

	.product--delivery,
	.table--media,
	.table--content {
		float: left;
	}

	// Product image
	.table--media {
		width: 20%;
		margin: 0 6.5% 0 0;

		img {
			.border-radius();
			border: 1px solid @borderColor;
			margin: 0 auto;
		}
	}

	// Content area
	.table--content {
		.unitize(12, 16, font-size);
		width: 73.5%;
	}

	.product--delivery,
	.delivery--status-icon {
		.unitize(12, 16, font-size);
		margin: 0;
	}

	// Product title
	.content--title {
		.unitize(18, 16, font-size);
		font-weight: bold;
		color: @primaryTextColor;
	}

	// Product actions
	.column--actions {
		position: absolute;
		bottom: 20%;
		width: 20%;
		text-align: center;

		.btn {
			.white-gradient();
			.unitize-padding(10, 14);

			i {
				margin: 0;
			}
		}
	}

	.column--label {
		color: @darkTextColor;
		text-align: left;
		margin: 0 0 0 26.5%;
		float: left;
		font-weight: bold;
	}

	.row--rebate .column--label {
		margin: 0 0 0 26.5%;
	}

	.column--total-price {
		font-weight: bold;
	}

	.column--quantity .js--fancy-select {
		.unitize(100, 16, min-width);
		.unitize(160, 16, max-width);
		width: auto;
	}

	.basket--badge {
		.unitize(48, 16, line-height);
		.unitize(16, 16, font-size);
		.border-radius(128px);
		.unitize-height(48);
		.unitize-width(48);
		margin-right: 9.25%;
		background: @borderColor;
		text-align: center;
		font-weight: bold;
		background: @primaryTextColor;
		color: #fff;
		font-weight: bold;

		.icon--arrow-right {
			.unitize(13, 16, font-size);
		}
	}

	.row--premium-product .basket--badge {
		.unitize(11, 16, font-size);
	}

	.table--actions + .alert {
		.unitize(10, 16, margin-top);
	}

	.content {
		.unitize(13, 16, font-size);
		margin: 0;
	}

	// Add product using the sku
	.add-product--form {
		.unitize-margin(12, 0);
	}

	.add-product--field,
	.add-voucher--field {
		width: 90%;
		.border-radius-multi(3px, 0, 0, 3px);
	}

	.add-product--button,
	.add-voucher--button {
		.unitize-padding(11, 0);
		.border-radius-multi(0, 3px, 3px, 0);
		width: 10%;
		text-align: center;

		.icon--arrow-right {
			padding: 0;
			margin: 0;
		}
	}

    .add-voucher--form {
        .unitize-margin(0, 0, 12, 0);
    }

	.add-voucher--panel {
		.unitize-margin(10, 0, 0, 0);
	}

	.table--aggregation {
		.unitize-margin(0, -20);
		.unitize-padding(12, 20);
		background: @primaryLightBackgroundColor;
		border: 1px solid @borderColor;
		border-left: 0 none;
		border-right: 0 none;

	}

    .table--shipping-costs .js--fancy-select {
        width: 100%;
    }

    .table--shipping-costs-trigger {
        font-weight: bold;
    }

	.btn--inquiry {
		width: 100%;
		display: block;
	}

	.main--actions {
		.unitize-margin(0, 0, 8, 0);
		.clearfix();
	}

    .table--footer {
        display: none;
    }

    .benefit--headline {
        .unitize(14, 16, font-size);
        color: @primaryTextColor;
        font-weight: bold;
    }
}

.aggregation--list {
	.unitize-margin(0, -20);
	.unitize-padding(12, 20);
	background: @primaryLightBackgroundColor;
	border-bottom: 1px solid @borderColor;

	.entry--label {
		width: 70%;
	}
	.entry--value {
		width: 30%;
		font-weight: bold;
		text-align: right;
	}

	.entry--total {
		font-weight: bold;
		color: #000;
	}
}

.premium-product.panel {
    .unitize-margin(10, 0);
}
.premium-product--content {
    .unitize-height(360);

    .product-slider--container {
        padding: 0;
    }
}
.premium-product {

    p {
        .unitize-margin(0, 0, 16);
    }

    .premium-product--difference {
        .unitize-padding(10, 16, 10, 16, 16);
        .border-radius();
        .white-gradient();
        font-color: @primaryTextColor;
        border: 1px solid @borderColor;
        font-weight: bold;
        display: block;
        text-shadow: 0 1px 0 #fff;

        .difference--price {
            .unitize(18, 16, font-size);
        }
    }

    .product--inner {
        .unitize-padding(5, 30);
        .unitize-margin(0, 0, 10);

        .product--image {
            .border-radius();
            .unitize(175, 16, min-height);
            .unitize-margin(0, 0, 15, 0);
            display: block;
            border: 1px solid @borderColor;
            position: relative;
            text-align: center;

            &::before {
                content: '';
                display: inline-block;
                height: 100%;
                vertical-align: middle;
            }
        }

        .premium-product--badge {
            .box-shadow();
            .border-radius(38px);
            .unitize-height(38);
            .unitize-width(38);
            .unitize(38, 16, line-height);
            .unitize(-19, 16, top);
            .unitize(-19, 16, right);
            background: @primaryColor;
            position: absolute;
            color: #fff;
            font-weight: bold;
        }

        .premium-product--free {
            color: @successText;
            font-weight: bold;
        }

        .btn {
            .unitize(15, 16, font-size);
            width: 100%;
            font-weight: normal;

            .icon--arrow-right {
                .unitize(8, 16, margin-top);
                float: right;
            }
        }
        .js--fancy-select {
            width: 100%;
        }
    }
}

@media screen and (min-width: @tabletViewportWidth) {
    .is--ctl-checkout .sidebar-main { display: none }

	.product--table {
		.unitize-margin(50, 0);

        .row--voucher { height: 100%; }

		.panel--body {
			border: 1px solid @borderColor;
		}

        .premium-product--content {
            border: 0 none;
        }

		.column--actions {
			position: static;
			bottom: auto;
		}

		// Hide all inline labels
		.column--label { display: none }

		// Basic header styling
		.table--header {
			.unitize-padding(18, 0, 8, 0);
			.unitize-margin(0, 0, 10, 0);
			border-bottom: 1px solid @borderColor;
			display: block;

			.table--column {
				.unitize(14, 16, font-size);
				font-weight: bold;
				color: #000;
			}

			.column--product {
				.unitize(16, 16, font-size);
			}
		}

		// Basic layout
		.table--row {
			.unitize-padding(10, 0, 10, 0);
			border-bottom: 1px solid @borderColor;
		}
		.table--column {
			width: 16.5%;
			padding-right: 1%;
		}

		.is--centered {
			display: inline-block;
			vertical-align: middle;
		}

		.column--product {
			width: 51%;
		}
		.column--actions {
			width: 3%;
			padding-right: 0;
		}

		// Media
		.table--media,
		.table--content {
			float: left;
		}
		.table--media {
			width: 20%;
		}
		.table--content {
			width: 65%;
		}
		.column--quantity {
			width: 10%;

			.js--fancy-select {
				min-width: 0;
			}
		}

		// Content styling
		.content--title {
			.unitize(16, 16, font-size);
			font-weight: bold;
			color: @primaryTextColor;
		}
		.column--total-price {
			font-weight: bold;
		}
		.product--delivery {
			margin: 0;
		}

		.basket--badge {
			.unitize-width(48);
			margin-left: 3%;
		}

        .row--premium-product .column--total-price {
            margin-left: 16.5%;
        }

		.row--rebate .column--total-price,
		.row--voucher .column--total-price {
			margin-left: 26.5%;
		}

		// Footer
		.add-product--form {
			.unitize-margin(15, 0, 20, 0);
			width: 35%;
		}
		.add-product--field {
			width: 80%;
		}
		.add-product--button {
			width: 20%;
		}

		.basket--footer {
			.unitize-margin(0, -10, -10, -10);
			.unitize(28, 16, padding-bottom);
			.clearfix();
			border-top: 1px solid @borderColor;
			background: @primaryLightBackgroundColor;

		}

		.aggregation--list,
		.table--aggregation {
			border: 0 none;
			background: transparent;
			margin: 0;
			float: left;
			width: 50%;
		}
		.table--aggregation {
			width: 44.5%
		}

		.table--actions {

			.btn--primary {
				.unitize-padding(10, 16, 10, 50);

				i {
					.unitize(40, 16, margin-left);
				}
			}

			.btn--secondary {
				.unitize-padding(10, 50, 10, 50);
				.unitize(20, 16, margin-right);
			}

            .btn--inquiry {
                .unitize(-130,  16, margin-left);
                .unitize(20, 16, top);
                .unitize-width(260);
                position: absolute;
                left: 50%;
                text-align: center;
            }
		}

        .table--footer {
            display: block;
        }
	}

    .footer--benefit {
        .unitize(14, 16, font-size);
        .unitize-padding(0, 20, 0, 20);
        width: 33.33332%;
    }
}

@media screen and (min-width: @tabletLandscapeViewportWidth) {
	.product--table .add-product--form {
		width: 25%;
	}
}

